<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout_autorization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageHeader"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/skillbox_cover" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/textView_autorization"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/editText_email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/editText_password_hint"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/checkbox_license"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/checkbox_license_text"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:enabled="false"
            android:text="@string/button_login_text" />
    </LinearLayout>
</ScrollView>